--- a/credits.html
+++ b/credits.html
@@ -5,13 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="main.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     </head>
     <body>
             <button  onclick="back()" class="back">Voltar</button>
-            <CENTER>
+            <center>
                 <h1>𝘾𝙧é𝙙𝙞𝙩𝙤𝙨</h1>
                 <img class="logo" src="OIP__2_-removebg-preview.png">
-            </CENTER><br><br><br><br><br><br><br><br>
+            </center><br><br><br><br><br><br><br><br>
             <p>  Quem fez essa página?
                  O aluno Miguel Albuquerque, criou essa página online como um projeto para a escola sendo um portal de notícias e avisos.
                  E como desenvolvedor dessa página o aluno Miguel Albuquerque agradece você por 
@@ -20,5 +21,9 @@
             </p> <br><br><br><br><br>
             <span>(obs: caso tenha ideia para adicionar algo ao site informe diretamente ao aluno acima )</span>
             <center>
-                <div><img  class="insta"  src="instagram.jpg">@albuquerrque</div>
+                <div >
+                   <a  class="instagram"  href="https://www.instagram.com/albuquerrque/" target="_blank">
+                       <i class="fab fa-instagram"></i>&nbsp;&nbsp;<h3>albuquerrque</h3>
+                   </a>
+                </div>
                </center>
