--- a/events.html
+++ b/events.html
@@ -5,10 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="main.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     </head>
     <body>     
         <button  onclick="back()" class="back">Voltar</button>
-               <CENTER>
+               <center>
         <h1>Notícias 3° CPMCE</h1>
         <img class="logo" src="OIP__2_-removebg-preview.png">
 
@@ -22,7 +23,11 @@
         </p>
         </div></center>
         <center>
-            <div><img  class="insta"  src="instagram.jpg">@3_cpm_tml</div>
+            <div >
+               <a  class="instagram"  href="https://www.instagram.com/3_cpm_tml/" target="_blank">
+                   <i class="fab fa-instagram"></i>&nbsp;&nbsp;<h3>3_cpm_tml</h3>
+               </a>
+            </div>
            </center>
     </body>
 </html>
