--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="main.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     </head>
     <body>
         <ul class="menu" >       
             <li ><button  class="button" onclick="events()">Eventos</button></li>
             <li ><button  class="button" onclick="credits()">Créditos</button></li>
         </ul>
-            <CENTER>
+            <center>
                 <h1>Notícias 3° CPMCE</h1>
                 <img class="logo" src="OIP__2_-removebg-preview.png">
             
@@ -35,9 +36,13 @@
                 A aluna Querem Hapuque assume o cargo de presidente do grêmio estudantil com projetos espetaculares para colocar em prática.Além de ser um exemplo de paciência
                 e sabedoria.
                 
-             </p><br></div><br></CENTER>
+             </p><br></div><br></center>
              <center>
-             <div><img  class="insta"  src="instagram.jpg">@3_cpm_tml</div>
+             <div >
+                <a  class="instagram"  href="https://www.instagram.com/3_cpm_tml/" target="_blank">
+                    <i class="fab fa-instagram"></i>&nbsp;&nbsp;<h3>3_cpm_tml</h3>
+                </a>
+             </div>
             </center>
     </body>
 </html>
